@@ -31,7 +31,7 @@ public:
   ~LDAPUserBase();
   static UserBase *maker();
 
-  int mboxData(const string &mbox, MboxData &md, const string &pass, string &error, bool &exists, bool &pwcorrect);  
+  int mboxData(const string &mbox, MboxData &md, const string &pass, string &error, bool &exists, bool &pwcorrect, const string &challenge);  
  
   bool connected(); 
 
