@@ -19,6 +19,8 @@
 #include "logger.hh"
 #include "argsettings.hh"
 #include "common.hh"
+#include <pg_config.h>
+#include <libpq++.h>
 
 extern Logger L;
 
@@ -109,7 +111,7 @@ string PostgreSQLUserBase::sqlEscape(const string &name)
 
 
 /** returns -1 for a database error, 0 for 'exists' and 1 for 'does not exist */
-int PostgreSQLUserBase::mboxData(const string &mbox, MboxData &md, const string &pass, string &error, bool &exists, bool &pwcorrect, const string &challange)
+int PostgreSQLUserBase::mboxData(const string &mbox, MboxData &md, const string &pass, string &error, bool &exists, bool &pwcorrect, const string &challenge)
 {
   exists=pwcorrect=false;
   error="Temporary database error (not connected)";
@@ -134,7 +136,7 @@ int PostgreSQLUserBase::mboxData(const string &mbox, MboxData &md, const string 
       md.fwdDest=d_db->GetValue(0,2);
     else {
       md.fwdDest="";
-      if (challenge.empty()) {
+      if (challenge.empty()) 
         pwcorrect=pwMatch(pass,d_db->GetValue(0,3));
       else 
         pwcorrect=md5Match(challenge,pass,d_db->GetValue(0,3));
